--- a/src/components/Profile/HeaderInformationClinic/HeaderInformationClinic.module.css
+++ b/src/components/Profile/HeaderInformationClinic/HeaderInformationClinic.module.css
@@ -1,12 +1,18 @@
-.container{
+.mainContent{
+    text-align: center;
+}
+.mainContent{
+
+}
+
+/* .container{
     width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
-    background: #f5f5f5;
     
 }
 .container h2{
     text-align: center;
-}
+} */
